Fixed Serverlocation Bubblespacing

--- a/css/style.css
+++ b/css/style.css
@@ -8977,10 +8977,10 @@ object {
     display:inline-block;
     background:#ffffff;
     padding:0 10px;
-    font-size: 12px;
+    font-size: 10px;
     font-weight: bold;
     left: 30px;
-    line-height: 1.8em;
+    line-height: 1.5em;
     color: #35404e;
     border-radius: 30px;
     -moz-border-radius: 30px;
